--- a/html/sucursal.html
+++ b/html/sucursal.html
@@ -31,8 +31,8 @@
             <a class="nav-link" href="#">Sucursales</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-              data-bs-toggle="dropdown" aria-expanded="false">Menu
+            <a class="nav-link dropdown-toggle" href="menu.html" id="navbarDropdownMenuLink" role="button"
+              aria-expanded="false">Menu
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <li><a class="dropdown-item" href="#">Pizza</a></li>
