Subida de Prueba

--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
 <body>
   <!--Start Nav-->
   <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top " id="nav">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#"><img src="img/Utiles/newLogoRedLight.png" alt="logo de Pizza Party"
-          class="logo"></a>
+    <div class="container-fluid fs-3">
+      <a class="navbar-brand" href="#"><img src="img/Utiles/newLogoRed.png" alt="logo de Pizza Party" class="logo"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -32,8 +31,8 @@
             <a class="nav-link" href="html/sucursal.html">Sucursales</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link active" href="/html/menu.html" id="navbarDropdownMenuLink" role="button"
-               aria-expanded="false">Menu
+            <a class="nav-link active" href="html/menu.html" id="navbarDropdownMenuLink" role="button"
+              aria-expanded="false">Menu
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <li><a class="dropdown-item" href="#">Pizza</a></li>
@@ -98,8 +97,8 @@
   <main>
     <section class="container  my-3  mx-auto rounded-3 novedades">
       <h1 class="text-center">Promociones</h1>
-      <div class="row justify-content-evenly ">
-        <div class="col-8 col-sm-6 col-md-3 my-2">
+      <div class="row w-100 mx-auto row_gap text-center">
+        <div class="col-sm-6 col-md-4 col-lg-3 ">
           <div class="card ">
             <img src="img/Promociones/promocion_menu.jpg" class="card-img-top" alt="...">
             <div class="card-body">
@@ -109,7 +108,7 @@
         </div>
         <!--End Tarjeta-->
 
-        <div class="col-8 col-sm-6 col-md-3  my-2">
+        <div class="col-sm-6 col-md-4 col-lg-3 ">
           <div class="card ">
             <img src="img/Promociones/promocion_delivery.png" class="card-img-top" alt="...">
             <div class="card-body">
@@ -120,7 +119,7 @@
         </div>
         <!--End Tarjeta-->
 
-        <div class="col-8 col-sm-6 col-md-3  my-2">
+        <div class="col-sm-6 col-md-4 col-lg-3 ">
           <div class="card">
             <img src="img/Promociones/promo_2x1.png" class="card-img-top " alt="...">
             <div class="card-body">
@@ -131,7 +130,7 @@
         </div>
         <!--End Tarjeta-->
 
-        <div class="col-8 col-sm-6 col-md-3  my-2">
+        <div class="col-sm-6 col-md-4 col-lg-3 ">
           <div class="card ">
             <img src="img/Promociones/promo_jueves.png" class="card-img-top" alt="...">
             <div class="card-body">
@@ -145,22 +144,24 @@
     </section>
     <!--End Promociones-->
 
-    <section class="container  my-5 mx-auto  container_deli p-5 rounded-3">
+    <section class="container-fluid  my-5 mx-auto  container_deli p-5 rounded-3 maxw_imgD">
       <h2 class="text-center">Delivery</h2>
-      <div class="row ">
-        <div class="col-6 col-md-4 my-2 w-30">
+      <div class="row px-auto ">
+        <div class="col-5 col-sm-4 my-2 w-30">
           <div class="card ">
-            <img src="img/Utiles/delivery.png" class="card-img-top" alt="">
+            <a href="#"><img src="img/Utiles/delivery.png" class="card-img-top border-hover" alt=""></a>
           </div>
         </div>
-        <div class="col-6  col-md-4 my-2 ">
-          <div class="card ">
-            <img src="img/Utiles/pedido_ya.png" class="card-img-top" alt="...">
+        <div class="col-5  col-sm-4 my-2 ">
+          <div class="card border ">
+            <a href="#">
+              <img src="img/Utiles/pedido_ya.png" class="card-img-top border" alt="...">
+            </a>
           </div>
         </div>
-        <div class="col-6  col-md-4 my-2 ">
+        <div class="col-5  col-sm-4 my-2 ">
           <div class="card ">
-            <img src="img/Utiles/rappi.png" class="card-img-top" alt="...">
+            <a href="#"><img src="img/Utiles/rappi.png" class="card-img-top border" alt="..."></a>
           </div>
         </div>
       </div>
@@ -170,8 +171,8 @@
   <!--End Main-->
 
   <footer class="footer container-fluid " id="redes">
-    <p class="footer_titulo fs-1 gap-2">Redes Sociales</p>
-    <div class="redes fs-3">
+    <p class="footer_titulo fs-2 ">Redes Sociales</p>
+    <div class="redes fs-4 gap-3">
       <a href="#" class="footer_redes" id="insta">Instagram <img class="footer_img" src="img/iconos/instagram.png"
           alt="icono de instagram"></a>
       <a href="#" class="footer_redes" id="face">Facebook <img class="footer_img" src="img/iconos/facebook.png"
@@ -179,7 +180,7 @@
       <a href="#" class="footer_redes" id="whatsapp">Whatsapp <img src="img/iconos/whatsapp.png" alt="icono de whatsapp"
           class="footer_img"></a>
     </div>
-    <p class="footer_text fs-5">© 2022 Vasquez — All rights reserved.</p>
+    <p class="footer_text fs-5 my-2">© 2022 Vasquez — All rights reserved.</p>
   </footer>
   <!--End Footer-->
 
