--- a/html/menu.html
+++ b/html/menu.html
@@ -15,8 +15,8 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top w-100" id="nav">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html"><img src="../img/Utiles/newLogoRedLight.png"
+        <div class="container-fluid fs-3">
+            <a class="navbar-brand" href="../index.html"><img src="../img/Utiles/newLogoRed.png"
                     alt="logo de Pizza Party" class="logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
