--- a/index.html
+++ b/index.html
@@ -15,49 +15,46 @@
 
 <body>
   <!--Start Nav-->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top " id="nav">
-    <div class="container-fluid fs-3">
-      <a class="navbar-brand" href="#"><img src="img/Utiles/newLogoRed.png" alt="logo de Pizza Party" class="logo"></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+  <nav class="navbar bg-light sticky-top nav_shadow ">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#"><img src="img/Utiles/newLogoRed.png" class="logo" alt="logo"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
+        aria-controls="offcanvasNavbar">
+        <span class="navbar-toggler-icon fs-2 center_icon">☰</span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav ">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="html/sucursal.html">Sucursales</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link active" href="html/menu.html" id="navbarDropdownMenuLink" role="button"
-              aria-expanded="false">Menu
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <li><a class="dropdown-item" href="#">Pizza</a></li>
-              <li><a class="dropdown-item" href="#">Empanadas</a></li>
-              <li><a class="dropdown-item" href="#">Minutas</a></li>
-              <li><a class="dropdown-item" href="#">Bebidas</a></li>
-              <li><a class="dropdown-item" href="#">Postre</a></li>
-              <li><a class="dropdown-item" href="#">Descuento</a></li>
-            </ul>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownDeliveryLink" role="button"
-              data-bs-toggle="dropdown" aria-expanded="false">Delivery</a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <li><a class="dropdown-item" href="#">Combos</a></li>
-              <li><a class="dropdown-item" href="#">Pizza</a></li>
-              <li><a class="dropdown-item" href="#">Empanadas</a></li>
-              <li><a class="dropdown-item" href="#">Minutas</a></li>
-              <li><a class="dropdown-item" href="#">Bebidas</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Opinion</a>
-          </li>
-        </ul>
+      <div class="offcanvas offcanvas-end nav " tabindex="-1" id="offcanvasNavbar"
+        aria-labelledby="offcanvasNavbarLabel">
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title fs-1 nav_title" id="offcanvasNavbarLabel">Pizza Party</h5>
+          <button type="button" class="btn-close bg-light" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body fs-3 ">
+          <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 ">
+            <li class="nav-item">
+              <a class="nav-link active color_white" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item ">
+              <a class="nav-link active color_white" href="html/sucursal.html">Sucursales</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle color_white" href="#" id="offcanvasNavbarDropdown" role="button"
+                data-bs-toggle="dropdown" aria-expanded="false">
+                Menu
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown">
+                <li><a class="dropdown-item" href="html/menu.html#pizza">Pizza</a></li>
+                <li><a class="dropdown-item" href="#">Empanadas</a></li>
+                <li><a class="dropdown-item" href="#">Minutas</a></li>
+                <li><a class="dropdown-item" href="#">Postres</a></li>
+                <li><a class="dropdown-item" href="#">Bebidas</a></li>
+                <li><a class="dropdown-item" href="#">Descuentos</a></li>
+              </ul>
+            </li>
+            <li class="nav-item ">
+              <a class="nav-link active color_white" href="html/opinion.html">Opinion</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </nav>
