subida de sitio con 4 paginas

--- a/html/menu.html
+++ b/html/menu.html
@@ -43,11 +43,11 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown">
                                 <li><a class="dropdown-item" href="#pizza">Pizza</a></li>
-                                <li><a class="dropdown-item" href="#">Empanadas</a></li>
-                                <li><a class="dropdown-item" href="#">Minutas</a></li>
-                                <li><a class="dropdown-item" href="#">Postres</a></li>
-                                <li><a class="dropdown-item" href="#">Bebidas</a></li>
-                                <li><a class="dropdown-item" href="#">Descuentos</a></li>
+                                <li><a class="dropdown-item" href="#empanada">Empanadas</a></li>
+                                <li><a class="dropdown-item" href="#minuto">Minutas</a></li>
+                                <li><a class="dropdown-item" href="#postre">Postres</a></li>
+                                <li><a class="dropdown-item" href="#bebida">Bebidas</a></li>
+                                <li><a class="dropdown-item" href="#descuento">Descuentos</a></li>
                             </ul>
                         </li>
                         <li class="nav-item ">
@@ -70,7 +70,6 @@
                         <div class="card-body ">
                             <h5>Pizza de muzzarella</h5>
                             <p class="card-text ">Clasica pizza de muzzarella y salsa</p>
-                            <a href="#" class="btn_menu">ir a comprar</a>
                         </div>
                     </div>
                 </div>
@@ -87,7 +86,8 @@
                     <div class="card">
                         <img src="../img/Pizzas/pizza_napo.jpg" class="card-img-top" alt="Pizza de napolitana">
                         <div class="card-body">
-                            <p class="card-text">Pizza de napolitana</p>
+                            <h5>Pizza de Jamon y muzza</h5>
+                            <p class="card-text ">Clasica pizza de muzzarella y salsa</p>
                         </div>
                     </div>
                 </div>
@@ -95,7 +95,8 @@
                     <div class="card">
                         <img src="../img/Pizzas/pizza_fugazzeta.jpg" class="card-img-top" alt="Pizza de fugazzeta">
                         <div class="card-body">
-                            <p class="card-text">Pizza de fugazzeta</p>
+                            <h5>Pizza de Jamon y muzza</h5>
+                            <p class="card-text ">Clasica pizza de muzzarella y salsa</p>
                         </div>
                     </div>
                 </div>
@@ -103,7 +104,8 @@
                     <div class="card">
                         <img src="../img/Pizzas/pizza_peperoni.png" class="card-img-top" alt="Pizza de peperoni">
                         <div class="card-body">
-                            <p class="card-text">Pizza de peperoni</p>
+                            <h5>Pizza de Jamon y muzza</h5>
+                            <p class="card-text ">Clasica pizza de muzzarella y salsa</p>
                         </div>
                     </div>
                 </div>
