--- a/html/sucursal.html
+++ b/html/sucursal.html
@@ -42,13 +42,13 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown">
                 <li><a class="dropdown-item" href="menu.html#pizza">Pizza</a></li>
-                <li><a class="dropdown-item" href="#">Empanadas</a></li>
-                <li><a class="dropdown-item" href="#">Minutas</a></li>
-                <li><a class="dropdown-item" href="#">Postres</a></li>
-                <li><a class="dropdown-item" href="#">Bebidas</a></li>
-                <li><a class="dropdown-item" href="#">Descuentos</a></li>
+                <li><a class="dropdown-item" href="menu.html#empanada">Empanadas</a></li>
+                <li><a class="dropdown-item" href="menu.html#minuta">Minutas</a></li>
+                <li><a class="dropdown-item" href="menu.html#postre">Postres</a></li>
+                <li><a class="dropdown-item" href="menu.html#bebida">Bebidas</a></li>
+                <li><a class="dropdown-item" href="menu.html#descuento">Descuentos</a></li>
               </ul>
-              
+
             </li>
             <li class="nav-item ">
               <a class="nav-link active color_white" href="opinion.html">Opinion</a>
