--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <h5 class="offcanvas-title fs-1 nav_title" id="offcanvasNavbarLabel">Pizza Party</h5>
           <button type="button" class="btn-close bg-light" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
-        <div class="offcanvas-body fs-3 ">
+        <div class="offcanvas-body fs-3  ">
           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 ">
             <li class="nav-item">
               <a class="nav-link active color_white" aria-current="page" href="#">Home</a>
@@ -43,11 +43,11 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown">
                 <li><a class="dropdown-item" href="html/menu.html#pizza">Pizza</a></li>
-                <li><a class="dropdown-item" href="#">Empanadas</a></li>
-                <li><a class="dropdown-item" href="#">Minutas</a></li>
-                <li><a class="dropdown-item" href="#">Postres</a></li>
-                <li><a class="dropdown-item" href="#">Bebidas</a></li>
-                <li><a class="dropdown-item" href="#">Descuentos</a></li>
+                <li><a class="dropdown-item" href="html/menu.html#empanada">Empanadas</a></li>
+                <li><a class="dropdown-item" href="html/menu.html#minuta">Minutas</a></li>
+                <li><a class="dropdown-item" href="html/menu.html#postre">Postres</a></li>
+                <li><a class="dropdown-item" href="html/menu.html#bebida">Bebidas</a></li>
+                <li><a class="dropdown-item" href="html/menu.html#descuento">Descuentos</a></li>
               </ul>
             </li>
             <li class="nav-item ">
@@ -60,7 +60,7 @@
   </nav>
   <!--End Nav-->
 
-  <header class="h-50">
+  <header>
     <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
@@ -92,7 +92,7 @@
   </header>
   <!--End header-->
   <main>
-    <section class="container  my-3  mx-auto rounded-3 novedades">
+    <section class="container-fluid  my-3  mx-auto rounded-3 novedades">
       <h1 class="text-center">Promociones</h1>
       <div class="row w-100 mx-auto row_gap text-center">
         <div class="col-sm-6 col-md-4 col-lg-3 ">
