--- a/html/opinion.html
+++ b/html/opinion.html
@@ -43,11 +43,11 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown">
                                 <li><a class="dropdown-item" href="menu.html#pizza">Pizza</a></li>
-                                <li><a class="dropdown-item" href="#">Empanadas</a></li>
-                                <li><a class="dropdown-item" href="#">Minutas</a></li>
-                                <li><a class="dropdown-item" href="#">Postres</a></li>
-                                <li><a class="dropdown-item" href="#">Bebidas</a></li>
-                                <li><a class="dropdown-item" href="#">Descuentos</a></li>
+                                <li><a class="dropdown-item" href="menu.html#empanada">Empanadas</a></li>
+                                <li><a class="dropdown-item" href="menu.html#minuta">Minutas</a></li>
+                                <li><a class="dropdown-item" href="menu.html#postre">Postres</a></li>
+                                <li><a class="dropdown-item" href="menu.html#bebida">Bebidas</a></li>
+                                <li><a class="dropdown-item" href="menu.html#descuento">Descuentos</a></li>
                             </ul>
                         </li>
                         <li class="nav-item ">
@@ -66,18 +66,15 @@
                 <h2 class="text-center my-3">Datos del cliente</h2>
                 <div class="mb-3">
                     <label for="apellido" class="form-label">Apellido</label>
-                    <input type="email" class="form-control" id="apellido"
-                        placeholder="surname/apellido">
+                    <input type="email" class="form-control" id="apellido" placeholder="surname/apellido">
                 </div>
                 <div class="mb-3">
                     <label for="nombre" class="form-label">Nombre</label>
-                    <input type="email" class="form-control" id="nombre"
-                        placeholder="name/nombre">
+                    <input type="email" class="form-control" id="nombre" placeholder="name/nombre">
                 </div>
                 <div class="mb-3">
                     <label for="email" class="form-label">Direccion de correo electronico</label>
-                    <input type="email" class="form-control" id="email"
-                        placeholder="name@example.com">
+                    <input type="email" class="form-control" id="email" placeholder="name@example.com">
                 </div>
                 <div class="mb-3">
                     <label for="cliente" class="form-label">Cliente</label>
@@ -92,21 +89,44 @@
             <div>
                 <h2 class="text-center my-4">Opinion del cliente</h2>
                 <div class="mb-3">
-                    
+                    <label for="cliente" class="form-label">Cliente</label>
+                    <select id="cliente" class="form-select form-select-md mb-3" aria-label=".form-select-lg example">
+                        <option selected>Tipo de cliente</option>
+                        <option value="delivery">Delivery</option>
+                        <option value="salon">Salon</option>
+                        <option value="mostrador">Mostrador</option>
+                    </select>
                 </div>
                 <div class="mb-3">
+                    <label for="cliente" class="form-label">Cliente</label>
+                    <select id="cliente" class="form-select form-select-md mb-3" aria-label=".form-select-lg example">
+                        <option selected>Tipo de cliente</option>
+                        <option value="delivery">Delivery</option>
+                        <option value="salon">Salon</option>
+                        <option value="mostrador">Mostrador</option>
+                    </select>
                 </div>
                 <div class="mb-3">
-
+                    <label for="cliente" class="form-label">Cliente</label>
+                    <select id="cliente" class="form-select form-select-md mb-3" aria-label=".form-select-lg example">
+                        <option selected>Tipo de cliente</option>
+                        <option value="delivery">Delivery</option>
+                        <option value="salon">Salon</option>
+                        <option value="mostrador">Mostrador</option>
+                    </select>
                 </div>
                 <div class="mb-3">
                     <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                 </div>
             </div>
+            <div class="col-12">
+                <button class="btn" type="submit">Enviar</button>
+                <button class="btn " type="reset">borrar</button>
+            </div>
         </form>
 
-        
+
     </main>
     <!--End Main-->
     <footer class="footer container-fluid " id="redes">
